objects/V_ODATA_ORDERS__x.object
<CustomObject>
    <fields>
        <fullName>BACK_OFFICE_ERROR__c</fullName>
        <description>BACK_OFFICE_ERROR</description>
        <externalDeveloperName>BACK_OFFICE_ERROR</externalDeveloperName>
        <label>BACK_OFFICE_ERROR</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BDOM__c</fullName>
        <description>BDOM</description>
        <externalDeveloperName>BDOM</externalDeveloperName>
        <label>BDOM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BILLING_ADDRESS__c</fullName>
        <description>BILLING_ADDRESS</description>
        <externalDeveloperName>BILLING_ADDRESS</externalDeveloperName>
        <label>BILLING_ADDRESS</label>
        <length>428</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BILL_ADDRESS1__c</fullName>
        <description>BILL_ADDRESS1</description>
        <externalDeveloperName>BILL_ADDRESS1</externalDeveloperName>
        <label>BILL_ADDRESS1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_ADDRESS2__c</fullName>
        <description>BILL_ADDRESS2</description>
        <externalDeveloperName>BILL_ADDRESS2</externalDeveloperName>
        <label>BILL_ADDRESS2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_ADDRESS_ID__c</fullName>
        <description>BILL_ADDRESS_ID</description>
        <externalDeveloperName>BILL_ADDRESS_ID</externalDeveloperName>
        <label>BILL_ADDRESS_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_PROFILE_NAME__c</fullName>
        <description>BILL_PROFILE_NAME</description>
        <externalDeveloperName>BILL_PROFILE_NAME</externalDeveloperName>
        <label>BILL_PROFILE_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_PROFILE_ROW_ID__c</fullName>
        <description>BILL_PROFILE_ROW_ID</description>
        <externalDeveloperName>BILL_PROFILE_ROW_ID</externalDeveloperName>
        <label>BILL_PROFILE_ROW_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_BANK_ACCOUNT_NAME__c</fullName>
        <description>BP_BANK_ACCOUNT_NAME</description>
        <externalDeveloperName>BP_BANK_ACCOUNT_NAME</externalDeveloperName>
        <label>BP_BANK_ACCOUNT_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_BANK_ACCOUNT_NUMBER__c</fullName>
        <description>BP_BANK_ACCOUNT_NUMBER</description>
        <externalDeveloperName>BP_BANK_ACCOUNT_NUMBER</externalDeveloperName>
        <label>BP_BANK_ACCOUNT_NUMBER</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_BANK_ACCOUNT_TYPE__c</fullName>
        <description>BP_BANK_ACCOUNT_TYPE</description>
        <externalDeveloperName>BP_BANK_ACCOUNT_TYPE</externalDeveloperName>
        <label>BP_BANK_ACCOUNT_TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_BANK_ROUTING_NUMBER__c</fullName>
        <description>BP_BANK_ROUTING_NUMBER</description>
        <externalDeveloperName>BP_BANK_ROUTING_NUMBER</externalDeveloperName>
        <label>BP_BANK_ROUTING_NUMBER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CONTACT_CACI__c</fullName>
        <description>BP_CONTACT_CACI</description>
        <externalDeveloperName>BP_CONTACT_CACI</externalDeveloperName>
        <label>BP_CONTACT_CACI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CONTACT_NAME__c</fullName>
        <description>BP_CONTACT_NAME</description>
        <externalDeveloperName>BP_CONTACT_NAME</externalDeveloperName>
        <label>BP_CONTACT_NAME</label>
        <length>101</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CON_FIRST_NAME__c</fullName>
        <description>BP_CON_FIRST_NAME</description>
        <externalDeveloperName>BP_CON_FIRST_NAME</externalDeveloperName>
        <label>BP_CON_FIRST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CON_LAST_NAME__c</fullName>
        <description>BP_CON_LAST_NAME</description>
        <externalDeveloperName>BP_CON_LAST_NAME</externalDeveloperName>
        <label>BP_CON_LAST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CON_SFDC_ID__c</fullName>
        <description>BP_CON_SFDC_ID</description>
        <externalDeveloperName>BP_CON_SFDC_ID</externalDeveloperName>
        <label>BP_CON_SFDC_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CON_SIEBEL_ID__c</fullName>
        <description>BP_CON_SIEBEL_ID</description>
        <externalDeveloperName>BP_CON_SIEBEL_ID</externalDeveloperName>
        <label>BP_CON_SIEBEL_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_EXPIRATION_DATE__c</fullName>
        <description>BP_EXPIRATION_DATE</description>
        <externalDeveloperName>BP_EXPIRATION_DATE</externalDeveloperName>
        <label>BP_EXPIRATION_DATE</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_LAST_UPD__c</fullName>
        <description>BP_LAST_UPD</description>
        <externalDeveloperName>BP_LAST_UPD</externalDeveloperName>
        <label>BP_LAST_UPD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BP_PAYMENT_METHOD__c</fullName>
        <description>BP_PAYMENT_METHOD</description>
        <externalDeveloperName>BP_PAYMENT_METHOD</externalDeveloperName>
        <label>BP_PAYMENT_METHOD</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_STATUS__c</fullName>
        <description>BP_STATUS</description>
        <externalDeveloperName>BP_STATUS</externalDeveloperName>
        <label>BP_STATUS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_TOKENIZED_CC_NUMBER__c</fullName>
        <description>BP_TOKENIZED_CC_NUMBER</description>
        <externalDeveloperName>BP_TOKENIZED_CC_NUMBER</externalDeveloperName>
        <label>BP_TOKENIZED_CC_NUMBER</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_EXPIRATION_MONTH__c</fullName>
        <description>CC_EXPIRATION_MONTH</description>
        <externalDeveloperName>CC_EXPIRATION_MONTH</externalDeveloperName>
        <label>CC_EXPIRATION_MONTH</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_EXPIRATION_YEAR__c</fullName>
        <description>CC_EXPIRATION_YEAR</description>
        <externalDeveloperName>CC_EXPIRATION_YEAR</externalDeveloperName>
        <label>CC_EXPIRATION_YEAR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <description>CITY</description>
        <externalDeveloperName>CITY</externalDeveloperName>
        <label>CITY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTRY__c</fullName>
        <description>COUNTRY</description>
        <externalDeveloperName>COUNTRY</externalDeveloperName>
        <label>COUNTRY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRDT_CD_NAME__c</fullName>
        <description>CRDT_CD_NAME</description>
        <externalDeveloperName>CRDT_CD_NAME</externalDeveloperName>
        <label>CRDT_CD_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <description>CREATED_BY</description>
        <externalDeveloperName>CREATED_BY</externalDeveloperName>
        <label>CREATED_BY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREDIT_CARD_TYPE__c</fullName>
        <description>CREDIT_CARD_TYPE</description>
        <externalDeveloperName>CREDIT_CARD_TYPE</externalDeveloperName>
        <label>CREDIT_CARD_TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATED_BY__c</fullName>
        <description>LAST_UPDATED_BY</description>
        <externalDeveloperName>LAST_UPDATED_BY</externalDeveloperName>
        <label>LAST_UPDATED_BY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LICENSE_NUMBER__c</fullName>
        <description>LICENSE_NUMBER</description>
        <externalDeveloperName>LICENSE_NUMBER</externalDeveloperName>
        <label>LICENSE_NUMBER</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MASKED_CC_NUM__c</fullName>
        <description>MASKED_CC_NUM</description>
        <externalDeveloperName>MASKED_CC_NUM</externalDeveloperName>
        <label>MASKED_CC_NUM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ON_CREDIT_CARD__c</fullName>
        <description>NAME_ON_CREDIT_CARD</description>
        <externalDeveloperName>NAME_ON_CREDIT_CARD</externalDeveloperName>
        <label>NAME_ON_CREDIT_CARD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_COMMENTS__c</fullName>
        <description>ORDER_COMMENTS</description>
        <externalDeveloperName>ORDER_COMMENTS</externalDeveloperName>
        <label>ORDER_COMMENTS</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_AUTHID__c</fullName>
        <description>ORDER_CONTACT_AUTHID</description>
        <externalDeveloperName>ORDER_CONTACT_AUTHID</externalDeveloperName>
        <label>ORDER_CONTACT_AUTHID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_CACI__c</fullName>
        <description>ORDER_CONTACT_CACI</description>
        <externalDeveloperName>ORDER_CONTACT_CACI</externalDeveloperName>
        <label>ORDER_CONTACT_CACI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_EMAIL__c</fullName>
        <description>ORDER_CONTACT_EMAIL</description>
        <externalDeveloperName>ORDER_CONTACT_EMAIL</externalDeveloperName>
        <label>ORDER_CONTACT_EMAIL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_FIRST_NAME__c</fullName>
        <description>ORDER_CONTACT_FIRST_NAME</description>
        <externalDeveloperName>ORDER_CONTACT_FIRST_NAME</externalDeveloperName>
        <label>ORDER_CONTACT_FIRST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_LAST_NAME__c</fullName>
        <description>ORDER_CONTACT_LAST_NAME</description>
        <externalDeveloperName>ORDER_CONTACT_LAST_NAME</externalDeveloperName>
        <label>ORDER_CONTACT_LAST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_NAME__c</fullName>
        <description>ORDER_CONTACT_NAME</description>
        <externalDeveloperName>ORDER_CONTACT_NAME</externalDeveloperName>
        <label>ORDER_CONTACT_NAME</label>
        <length>101</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CREATED_DATETIME__c</fullName>
        <description>ORDER_CREATED_DATETIME</description>
        <externalDeveloperName>ORDER_CREATED_DATETIME</externalDeveloperName>
        <label>ORDER_CREATED_DATETIME</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ORDER_CURRENCY__c</fullName>
        <description>ORDER_CURRENCY</description>
        <externalDeveloperName>ORDER_CURRENCY</externalDeveloperName>
        <label>ORDER_CURRENCY</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_DATE__c</fullName>
        <description>ORDER_DATE</description>
        <externalDeveloperName>ORDER_DATE</externalDeveloperName>
        <label>ORDER_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ORDER_LAST_UPD_DATETIME__c</fullName>
        <description>ORDER_LAST_UPD_DATETIME</description>
        <externalDeveloperName>ORDER_LAST_UPD_DATETIME</externalDeveloperName>
        <label>ORDER_LAST_UPD_DATETIME</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ORDER_METHOD__c</fullName>
        <description>ORDER_METHOD</description>
        <externalDeveloperName>ORDER_METHOD</externalDeveloperName>
        <label>ORDER_METHOD</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <description>ORDER_NUMBER</description>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>ORDER_NUMBER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_STATUS__c</fullName>
        <description>ORDER_STATUS</description>
        <externalDeveloperName>ORDER_STATUS</externalDeveloperName>
        <label>ORDER_STATUS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_TAX_EXEMPT_FLAG__c</fullName>
        <description>ORDER_TAX_EXEMPT_FLAG</description>
        <externalDeveloperName>ORDER_TAX_EXEMPT_FLAG</externalDeveloperName>
        <label>ORDER_TAX_EXEMPT_FLAG</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_TYPE__c</fullName>
        <description>ORDER_TYPE</description>
        <externalDeveloperName>ORDER_TYPE</externalDeveloperName>
        <label>ORDER_TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_BILL_ACCOUNT_CAN__c</fullName>
        <description>ORD_BILL_ACCOUNT_CAN</description>
        <externalDeveloperName>ORD_BILL_ACCOUNT_CAN</externalDeveloperName>
        <label>ORD_BILL_ACCOUNT_CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_BILL_ACCOUNT_ID__c</fullName>
        <description>ORD_BILL_ACCOUNT_ID</description>
        <externalDeveloperName>ORD_BILL_ACCOUNT_ID</externalDeveloperName>
        <label>ORD_BILL_ACCOUNT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_BILL_ACCOUNT_NAME__c</fullName>
        <description>ORD_BILL_ACCOUNT_NAME</description>
        <externalDeveloperName>ORD_BILL_ACCOUNT_NAME</externalDeveloperName>
        <label>ORD_BILL_ACCOUNT_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_BILL_ACCOUNT_REALM_ID__c</fullName>
        <description>ORD_BILL_ACCOUNT_REALM_ID</description>
        <externalDeveloperName>ORD_BILL_ACCOUNT_REALM_ID</externalDeveloperName>
        <label>ORD_BILL_ACCOUNT_REALM_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_PRI_ACCOUNT_CAN__c</fullName>
        <description>ORD_PRI_ACCOUNT_CAN</description>
        <externalDeveloperName>ORD_PRI_ACCOUNT_CAN</externalDeveloperName>
        <label>ORD_PRI_ACCOUNT_CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_PRI_ACCOUNT_ID__c</fullName>
        <description>ORD_PRI_ACCOUNT_ID</description>
        <externalDeveloperName>ORD_PRI_ACCOUNT_ID</externalDeveloperName>
        <label>ORD_PRI_ACCOUNT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_PRI_ACCOUNT_NAME__c</fullName>
        <description>ORD_PRI_ACCOUNT_NAME</description>
        <externalDeveloperName>ORD_PRI_ACCOUNT_NAME</externalDeveloperName>
        <label>ORD_PRI_ACCOUNT_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_PRI_ACCOUNT_REALM_ID__c</fullName>
        <description>ORD_PRI_ACCOUNT_REALM_ID</description>
        <externalDeveloperName>ORD_PRI_ACCOUNT_REALM_ID</externalDeveloperName>
        <label>ORD_PRI_ACCOUNT_REALM_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_PRI_ACCOUNT_SFDCID__c</fullName>
        <description>ORD_PRI_ACCOUNT_SFDCID</description>
        <externalDeveloperName>ORD_PRI_ACCOUNT_SFDCID</externalDeveloperName>
        <label>ORD_PRI_ACCOUNT_SFDCID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SERV_ACCOUNT_CAN__c</fullName>
        <description>ORD_SERV_ACCOUNT_CAN</description>
        <externalDeveloperName>ORD_SERV_ACCOUNT_CAN</externalDeveloperName>
        <label>ORD_SERV_ACCOUNT_CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SERV_ACCOUNT_ID__c</fullName>
        <description>ORD_SERV_ACCOUNT_ID</description>
        <externalDeveloperName>ORD_SERV_ACCOUNT_ID</externalDeveloperName>
        <label>ORD_SERV_ACCOUNT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SERV_ACCOUNT_NAME__c</fullName>
        <description>ORD_SERV_ACCOUNT_NAME</description>
        <externalDeveloperName>ORD_SERV_ACCOUNT_NAME</externalDeveloperName>
        <label>ORD_SERV_ACCOUNT_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SERV_ACCOUNT_REALM_ID__c</fullName>
        <description>ORD_SERV_ACCOUNT_REALM_ID</description>
        <externalDeveloperName>ORD_SERV_ACCOUNT_REALM_ID</externalDeveloperName>
        <label>ORD_SERV_ACCOUNT_REALM_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SHIPPING_ACCOUNT_NAME__c</fullName>
        <description>ORD_SHIPPING_ACCOUNT_NAME</description>
        <externalDeveloperName>ORD_SHIPPING_ACCOUNT_NAME</externalDeveloperName>
        <label>ORD_SHIPPING_ACCOUNT_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_METHOD__c</fullName>
        <description>PAYMENT_METHOD</description>
        <externalDeveloperName>PAYMENT_METHOD</externalDeveloperName>
        <label>PAYMENT_METHOD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_TERM__c</fullName>
        <description>PAYMENT_TERM</description>
        <externalDeveloperName>PAYMENT_TERM</externalDeveloperName>
        <label>PAYMENT_TERM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_COMMENTS__c</fullName>
        <description>QUOTE_COMMENTS</description>
        <externalDeveloperName>QUOTE_COMMENTS</externalDeveloperName>
        <label>QUOTE_COMMENTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_ID__c</fullName>
        <description>QUOTE_ID</description>
        <externalDeveloperName>QUOTE_ID</externalDeveloperName>
        <label>QUOTE_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_NAME__c</fullName>
        <description>QUOTE_NAME</description>
        <externalDeveloperName>QUOTE_NAME</externalDeveloperName>
        <label>QUOTE_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_NUMBER__c</fullName>
        <description>QUOTE_NUMBER</description>
        <externalDeveloperName>QUOTE_NUMBER</externalDeveloperName>
        <label>QUOTE_NUMBER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_SFDC_OPTY_ID__c</fullName>
        <description>QUOTE_SFDC_OPTY_ID</description>
        <externalDeveloperName>QUOTE_SFDC_OPTY_ID</externalDeveloperName>
        <label>QUOTE_SFDC_OPTY_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETURN_REASON__c</fullName>
        <description>RETURN_REASON</description>
        <externalDeveloperName>RETURN_REASON</externalDeveloperName>
        <label>RETURN_REASON</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <description>ROW_ID</description>
        <externalDeveloperName>ROW_ID</externalDeveloperName>
        <label>ROW_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <description>STATE</description>
        <externalDeveloperName>STATE</externalDeveloperName>
        <label>STATE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_AMOUNT__c</fullName>
        <description>TOTAL_AMOUNT</description>
        <externalDeveloperName>TOTAL_AMOUNT</externalDeveloperName>
        <label>TOTAL_AMOUNT</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_CREDIT_AMOUNT_TAX__c</fullName>
        <description>TOTAL_CREDIT_AMOUNT_TAX</description>
        <externalDeveloperName>TOTAL_CREDIT_AMOUNT_TAX</externalDeveloperName>
        <label>TOTAL_CREDIT_AMOUNT_TAX</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_CREDIT_AMOUNT__c</fullName>
        <description>TOTAL_CREDIT_AMOUNT</description>
        <externalDeveloperName>TOTAL_CREDIT_AMOUNT</externalDeveloperName>
        <label>TOTAL_CREDIT_AMOUNT</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_DISCOUNT__c</fullName>
        <description>TOTAL_DISCOUNT</description>
        <externalDeveloperName>TOTAL_DISCOUNT</externalDeveloperName>
        <label>TOTAL_DISCOUNT</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_EXT_CURRENT_CHARGE__c</fullName>
        <description>TOTAL_EXT_CURRENT_CHARGE</description>
        <externalDeveloperName>TOTAL_EXT_CURRENT_CHARGE</externalDeveloperName>
        <label>TOTAL_EXT_CURRENT_CHARGE</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_EXT_FREIGHT_TAX_AMOUNT__c</fullName>
        <description>TOTAL_EXT_FREIGHT_TAX_AMOUNT</description>
        <externalDeveloperName>TOTAL_EXT_FREIGHT_TAX_AMOUNT</externalDeveloperName>
        <label>TOTAL_EXT_FREIGHT_TAX_AMOUNT</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_EXT_NET_SHIPPING_CHARGE__c</fullName>
        <description>TOTAL_EXT_NET_SHIPPING_CHARGE</description>
        <externalDeveloperName>TOTAL_EXT_NET_SHIPPING_CHARGE</externalDeveloperName>
        <label>TOTAL_EXT_NET_SHIPPING_CHARGE</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_EXT_TAX_AMOUNT__c</fullName>
        <description>TOTAL_EXT_TAX_AMOUNT</description>
        <externalDeveloperName>TOTAL_EXT_TAX_AMOUNT</externalDeveloperName>
        <label>TOTAL_EXT_TAX_AMOUNT</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_TAX_AMOUNT__c</fullName>
        <description>TOTAL_TAX_AMOUNT</description>
        <externalDeveloperName>TOTAL_TAX_AMOUNT</externalDeveloperName>
        <label>TOTAL_TAX_AMOUNT</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIPCODE__c</fullName>
        <description>ZIPCODE</description>
        <externalDeveloperName>ZIPCODE</externalDeveloperName>
        <label>ZIPCODE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>